--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -1,9 +1,6 @@
 name: Basic GitHub Actions Workflow
 
-on:
-  push:
-  pull_request:
-  workflow_dispatch:
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   basic-job:
