--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Run the Gradle package task
         uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
         with:
-          arguments: -b ci.gradle package
+          arguments: -b build.gradle package
 
