--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,6 @@ sourceSets {
     }
 }
 dependencies {
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
 }
