--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
 group 'org.example'
@@ -10,6 +11,7 @@ repositories {
 }
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
 }
 sourceSets {
     main {
