--- a/jacoco.gradle
+++ b/jacoco.gradle
@@ -7,16 +7,18 @@ jacoco {
 
 jacocoTestReport {
     dependsOn test
-    group = "reporting"
     description = "Generate Jacoco coverage reports after running tests."
     reports {
         xml.required = false
         csv.required = false
+        html.required = true
         html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
     }
+    finalizedBy jacocoTestCoverageVerification
 }
 
 jacocoTestCoverageVerification {
+    dependsOn jacocoTestReport
     violationRules {
         rule {
             limit {
@@ -39,3 +41,4 @@ jacocoTestCoverageVerification {
 }
 
 build.dependsOn(jacocoTestReport)
+build.dependsOn(jacocoTestCoverageVerification)
