--- a/.github/workflows/generate_coverage.yml
+++ b/.github/workflows/generate_coverage.yml
@@ -32,3 +32,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           min-coverage-overall: 50
           min-coverage-changed-files: 80
+      - name: Upload reports to codecov.io
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
