--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,5 @@ sourceSets {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
 }
