--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ repositories {
 test {
     enabled = true
     useJUnitPlatform()
+    jacoco {
+        destinationFile = layout.buildDirectory.file('jacoco/jacocoTest.exec').get().asFile
+        classDumpDir = layout.buildDirectory.dir('jacoco/classpathdumps').get().asFile
+    }
     finalizedBy jacocoTestReport
 }
 sourceSets {
