--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ test {
     enabled = true
     useJUnitPlatform()
     jacoco {
+        enabled = true
         destinationFile = layout.buildDirectory.file('jacoco/jacocoTest.exec').get().asFile
         classDumpDir = layout.buildDirectory.dir('jacoco/classpathdumps').get().asFile
     }
