--- a/.github/workflows/generate_coverage.yml
+++ b/.github/workflows/generate_coverage.yml
@@ -17,10 +17,10 @@ jobs:
           distribution: 'temurin'
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
-      - name: Build and Run Coverage
+      - name: Run Coverage
         run: |
           chmod +x ./gradlew
-          gradle build
+          ./gradlew test
 
       - name: Add coverage to PR
         id: jacoco
